--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -37,7 +37,8 @@ Mcu.IP1=DMA
 Mcu.IP10=TIM4
 Mcu.IP11=TIM5
 Mcu.IP12=TIM6
-Mcu.IP13=USART1
+Mcu.IP13=TIM12
+Mcu.IP14=USART1
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -46,62 +47,66 @@ Mcu.IP6=SPI2
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE4
-Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PE7
-Mcu.Pin15=PE9
-Mcu.Pin16=PB10
-Mcu.Pin17=PB15
-Mcu.Pin18=PD9
-Mcu.Pin19=PD10
-Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin20=PD11
-Mcu.Pin21=PD12
-Mcu.Pin22=PD13
-Mcu.Pin23=PD14
-Mcu.Pin24=PC6
-Mcu.Pin25=PC7
-Mcu.Pin26=PC8
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
-Mcu.Pin3=PC0
-Mcu.Pin30=PA10
-Mcu.Pin31=PA11
-Mcu.Pin32=PD0
-Mcu.Pin33=PD1
-Mcu.Pin34=PD6
-Mcu.Pin35=PB4
-Mcu.Pin36=PB5
-Mcu.Pin37=PE1
-Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin39=VP_TIM1_VS_ControllerModeGated
-Mcu.Pin4=PC1
-Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin42=VP_TIM2_VS_ControllerModeClock
-Mcu.Pin43=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin44=VP_TIM2_VS_OPM
-Mcu.Pin45=VP_TIM3_VS_ControllerModeGated
-Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin48=VP_TIM5_VS_ControllerModeClock
-Mcu.Pin49=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin5=PC2
-Mcu.Pin50=VP_TIM5_VS_OPM
-Mcu.Pin51=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin6=PC3
-Mcu.Pin7=PA2
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=52
+Mcu.Pin0=PE2
+Mcu.Pin1=PE4
+Mcu.Pin10=PA2
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PE7
+Mcu.Pin18=PE9
+Mcu.Pin19=PB10
+Mcu.Pin2=PH0-OSC_IN
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PD9
+Mcu.Pin23=PD10
+Mcu.Pin24=PD11
+Mcu.Pin25=PD12
+Mcu.Pin26=PD13
+Mcu.Pin27=PD14
+Mcu.Pin28=PC6
+Mcu.Pin29=PC7
+Mcu.Pin3=PH1-OSC_OUT
+Mcu.Pin30=PC8
+Mcu.Pin31=PC9
+Mcu.Pin32=PA8
+Mcu.Pin33=PA9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA11
+Mcu.Pin36=PA15
+Mcu.Pin37=PD0
+Mcu.Pin38=PD1
+Mcu.Pin39=PD6
+Mcu.Pin4=PC0
+Mcu.Pin40=PB3
+Mcu.Pin41=PB4
+Mcu.Pin42=PB5
+Mcu.Pin43=PE0
+Mcu.Pin44=PE1
+Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin46=VP_TIM1_VS_ControllerModeGated
+Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin49=VP_TIM2_VS_OPM
+Mcu.Pin5=PC1
+Mcu.Pin50=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin51=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin53=VP_TIM5_VS_OPM
+Mcu.Pin54=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM12_VS_ControllerModeClock
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=56
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -128,12 +133,27 @@ NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIO_Label=ENC_A_MEASURE_CROSS_FEED
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA0-WKUP.Signal=S_TIM5_CH1
+PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=ENC_B_MEASURE_CROSS_FEED
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA1.Signal=S_TIM5_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=SWITCH_TOUCH_LOCK
 PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Signal=GPIO_Input
+PA15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA15.GPIO_Label=ENC_A_MEASURE_LONGITUDAL_FEED
+PA15.GPIO_PuPd=GPIO_NOPULL
+PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA15.Signal=S_TIM2_CH1_ETR
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=POTENTIOMETER
 PA2.GPIO_PuPd=GPIO_NOPULL
@@ -167,11 +187,21 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=SPI_TOUCH_CLK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB14.GPIO_Label=ENC_SPINDLE
+PB14.GPIO_PuPd=GPIO_PULLUP
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB14.Signal=S_TIM12_CH1
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=BUTTON_UP
 PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB3.GPIO_Label=ENC_B_MEASURE_LONGITUDAL_FEED
+PB3.GPIO_PuPd=GPIO_NOPULL
+PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB3.Signal=S_TIM2_CH2
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=SPI_LCD_MISO
 PB4.Mode=Full_Duplex_Master
@@ -248,11 +278,11 @@ PD11.GPIO_PuPd=GPIO_PULLUP
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_PuPd,GPIO_Label
-PD12.GPIO_Label=PANEL_ENC_B
+PD12.GPIO_Label=ENC_B_PANEL
 PD12.GPIO_PuPd=GPIO_PULLUP
 PD12.Signal=S_TIM4_CH1
 PD13.GPIOParameters=GPIO_PuPd,GPIO_Label
-PD13.GPIO_Label=PANEL_ENC_A
+PD13.GPIO_Label=ENC_A_PANEL
 PD13.GPIO_PuPd=GPIO_PULLUP
 PD13.Signal=S_TIM4_CH2
 PD14.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -270,11 +300,19 @@ PD9.GPIO_Label=BUTTON_DOWN
 PD9.GPIO_PuPd=GPIO_PULLUP
 PD9.Locked=true
 PD9.Signal=GPIO_Input
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=SPEAKER
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE1.GPIO_Label=SWITCH_RUN
 PE1.GPIO_PuPd=GPIO_PULLUP
 PE1.Locked=true
 PE1.Signal=GPIO_Input
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=MOTOR_POWER
+PE2.Locked=true
+PE2.Signal=GPIO_Output
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE7.GPIOParameters=PinState,GPIO_Label
@@ -321,7 +359,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM8_Init-TIM8-false-HAL-true,14-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -361,14 +399,24 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SH.S_TIM12_CH1.0=TIM12_CH1,TriggerSource_TI1FP1
+SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
 SH.S_TIM4_CH2.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
+SH.S_TIM5_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -393,7 +441,13 @@ TIM1.Prescaler=168-1
 TIM1.Pulse-PWM\ Generation1\ CH1=1
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM2.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM12.IPParameters=Slave_TriggerPolarity
+TIM12.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_BOTHEDGE
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM2.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM2.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC2Polarity,IC1Polarity,ClockDivision,EncoderMode
 TIM2.Period=5000
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
@@ -413,7 +467,11 @@ TIM4.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period
 TIM4.Period=0xFFFF-1
-TIM5.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM5.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM5.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM5.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC1Polarity,IC2Polarity,ClockDivision,EncoderMode
 TIM5.Period=5000
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
@@ -424,16 +482,14 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_TIM12_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM12_VS_ControllerModeClock.Signal=TIM12_VS_ControllerModeClock
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR1
 VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
 VP_TIM1_VS_ControllerModeGated.Mode=Gated Mode
 VP_TIM1_VS_ControllerModeGated.Signal=TIM1_VS_ControllerModeGated
-VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
-VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
-VP_TIM2_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM2_VS_ControllerModeClock.Signal=TIM2_VS_ControllerModeClock
 VP_TIM2_VS_OPM.Mode=OPM_bit
 VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
@@ -442,10 +498,6 @@ VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
 VP_TIM3_VS_ControllerModeGated.Mode=Gated Mode
 VP_TIM3_VS_ControllerModeGated.Signal=TIM3_VS_ControllerModeGated
-VP_TIM5_VS_ClockSourceITR.Mode=TriggerSource_ITR1
-VP_TIM5_VS_ClockSourceITR.Signal=TIM5_VS_ClockSourceITR
-VP_TIM5_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM5_VS_ControllerModeClock.Signal=TIM5_VS_ControllerModeClock
 VP_TIM5_VS_OPM.Mode=OPM_bit
 VP_TIM5_VS_OPM.Signal=TIM5_VS_OPM
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
