--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -37,8 +37,9 @@ Mcu.IP1=DMA
 Mcu.IP10=TIM4
 Mcu.IP11=TIM5
 Mcu.IP12=TIM6
-Mcu.IP13=TIM12
-Mcu.IP14=USART1
+Mcu.IP13=TIM7
+Mcu.IP14=TIM12
+Mcu.IP15=USART1
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -47,7 +48,7 @@ Mcu.IP6=SPI2
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -80,33 +81,35 @@ Mcu.Pin32=PA8
 Mcu.Pin33=PA9
 Mcu.Pin34=PA10
 Mcu.Pin35=PA11
-Mcu.Pin36=PA15
-Mcu.Pin37=PD0
-Mcu.Pin38=PD1
-Mcu.Pin39=PD6
+Mcu.Pin36=PA12
+Mcu.Pin37=PA15
+Mcu.Pin38=PD0
+Mcu.Pin39=PD1
 Mcu.Pin4=PC0
-Mcu.Pin40=PB3
-Mcu.Pin41=PB4
-Mcu.Pin42=PB5
-Mcu.Pin43=PE0
-Mcu.Pin44=PE1
-Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin46=VP_TIM1_VS_ControllerModeGated
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin49=VP_TIM2_VS_OPM
+Mcu.Pin40=PD6
+Mcu.Pin41=PB3
+Mcu.Pin42=PB4
+Mcu.Pin43=PB5
+Mcu.Pin44=PE0
+Mcu.Pin45=PE1
+Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin47=VP_TIM1_VS_ControllerModeGated
+Mcu.Pin48=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM1_VS_ClockSourceITR
 Mcu.Pin5=PC1
-Mcu.Pin50=VP_TIM3_VS_ControllerModeGated
-Mcu.Pin51=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin53=VP_TIM5_VS_OPM
-Mcu.Pin54=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM12_VS_ControllerModeClock
+Mcu.Pin50=VP_TIM2_VS_OPM
+Mcu.Pin51=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin52=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin54=VP_TIM5_VS_OPM
+Mcu.Pin55=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM12_VS_ControllerModeClock
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=56
+Mcu.PinsNb=58
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -149,6 +152,10 @@ PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=SWITCH_TOUCH_LOCK
 PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=ABS_POS_CS
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA15.GPIO_Label=ENC_A_MEASURE_LONGITUDAL_FEED
 PA15.GPIO_PuPd=GPIO_NOPULL
@@ -160,7 +167,7 @@ PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.Signal=ADCx_IN2
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=SPI_TFT_CS
-PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
@@ -258,7 +265,7 @@ PC9.GPIO_Label=LONGITUDAL_FEED_DIR
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PD0.GPIO_Label=SWITCH_GAP_COMPENSATION
+PD0.GPIO_Label=SWITCH_GO_TO_MODE
 PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.Signal=GPIO_Input
@@ -315,8 +322,9 @@ PE2.Locked=true
 PE2.Signal=GPIO_Output
 PE4.Locked=true
 PE4.Signal=GPIO_Input
-PE7.GPIOParameters=PinState,GPIO_Label
+PE7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PE7.GPIO_Label=SPI_TFT2_CS
+PE7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE7.Locked=true
 PE7.PinState=GPIO_PIN_SET
 PE7.Signal=GPIO_Output
@@ -478,6 +486,8 @@ TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=1000
 TIM6.Prescaler=84-1
+TIM7.IPParameters=Prescaler
+TIM7.Prescaler=84-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -502,6 +512,8 @@ VP_TIM5_VS_OPM.Mode=OPM_bit
 VP_TIM5_VS_OPM.Signal=TIM5_VS_OPM
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
