--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -158,7 +158,7 @@ PA12.Locked=true
 PA12.Signal=GPIO_Output
 PA15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA15.GPIO_Label=ENC_A_MEASURE_LONGITUDAL_FEED
-PA15.GPIO_PuPd=GPIO_NOPULL
+PA15.GPIO_PuPd=GPIO_PULLUP
 PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA15.Signal=S_TIM2_CH1_ETR
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -206,7 +206,7 @@ PB15.Locked=true
 PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=ENC_B_MEASURE_LONGITUDAL_FEED
-PB3.GPIO_PuPd=GPIO_NOPULL
+PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB3.Signal=S_TIM2_CH2
 PB4.GPIOParameters=GPIO_Label
@@ -478,7 +478,7 @@ TIM4.IC2Polarity=TIM_ICPOLARITY_FALLING
 TIM4.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,Period,Prescaler,IC1Filter,IC2Filter
 TIM4.Period=0xFFFF-1
 TIM4.Prescaler=4-1
-TIM5.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM5.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
 TIM5.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM5.IC2Polarity=TIM_ICPOLARITY_FALLING
