--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -453,9 +453,11 @@ TIM12.IPParameters=Slave_TriggerPolarity
 TIM12.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_BOTHEDGE
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC1Filter=15
 TIM2.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM2.IC2Filter=15
 TIM2.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM2.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC2Polarity,IC1Polarity,ClockDivision,EncoderMode
+TIM2.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC2Polarity,IC1Polarity,ClockDivision,EncoderMode,IC1Filter,IC2Filter
 TIM2.Period=5000
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
@@ -480,9 +482,11 @@ TIM4.Period=0xFFFF-1
 TIM4.Prescaler=4-1
 TIM5.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IC1Filter=15
 TIM5.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM5.IC2Filter=15
 TIM5.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM5.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC1Polarity,IC2Polarity,ClockDivision,EncoderMode
+TIM5.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC1Polarity,IC2Polarity,ClockDivision,EncoderMode,IC2Filter,IC1Filter
 TIM5.Period=5000
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
