--- a/lt10m_control.ioc
+++ b/lt10m_control.ioc
@@ -38,7 +38,7 @@ Mcu.IP10=TIM4
 Mcu.IP11=TIM5
 Mcu.IP12=TIM6
 Mcu.IP13=TIM7
-Mcu.IP14=TIM12
+Mcu.IP14=TIM8
 Mcu.IP15=USART1
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
@@ -53,25 +53,25 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE4
-Mcu.Pin10=PA2
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
 Mcu.Pin17=PE7
 Mcu.Pin18=PE9
 Mcu.Pin19=PB10
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PD9
-Mcu.Pin23=PD10
-Mcu.Pin24=PD11
-Mcu.Pin25=PD12
-Mcu.Pin26=PD13
-Mcu.Pin27=PD14
+Mcu.Pin20=PB15
+Mcu.Pin21=PD9
+Mcu.Pin22=PD10
+Mcu.Pin23=PD11
+Mcu.Pin24=PD12
+Mcu.Pin25=PD13
+Mcu.Pin26=PD14
+Mcu.Pin27=PD15
 Mcu.Pin28=PC6
 Mcu.Pin29=PC7
 Mcu.Pin3=PH1-OSC_OUT
@@ -83,32 +83,32 @@ Mcu.Pin34=PA10
 Mcu.Pin35=PA11
 Mcu.Pin36=PA12
 Mcu.Pin37=PA15
-Mcu.Pin38=PD0
-Mcu.Pin39=PD1
+Mcu.Pin38=PC11
+Mcu.Pin39=PD0
 Mcu.Pin4=PC0
-Mcu.Pin40=PD6
-Mcu.Pin41=PB3
-Mcu.Pin42=PB4
-Mcu.Pin43=PB5
-Mcu.Pin44=PE0
-Mcu.Pin45=PE1
-Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin47=VP_TIM1_VS_ControllerModeGated
-Mcu.Pin48=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin5=PC1
-Mcu.Pin50=VP_TIM2_VS_OPM
-Mcu.Pin51=VP_TIM3_VS_ControllerModeGated
-Mcu.Pin52=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin54=VP_TIM5_VS_OPM
-Mcu.Pin55=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM12_VS_ControllerModeClock
-Mcu.Pin6=PC2
-Mcu.Pin7=PC3
-Mcu.Pin8=PA0-WKUP
-Mcu.Pin9=PA1
+Mcu.Pin40=PD1
+Mcu.Pin41=PD6
+Mcu.Pin42=PB3
+Mcu.Pin43=PB4
+Mcu.Pin44=PB5
+Mcu.Pin45=PE0
+Mcu.Pin46=PE1
+Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin48=VP_TIM1_VS_ControllerModeGated
+Mcu.Pin49=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin5=PC2
+Mcu.Pin50=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin51=VP_TIM2_VS_OPM
+Mcu.Pin52=VP_TIM3_VS_ControllerModeGated
+Mcu.Pin53=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin55=VP_TIM5_VS_OPM
+Mcu.Pin56=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin6=PC3
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
 Mcu.PinsNb=58
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -120,7 +120,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -190,15 +189,14 @@ PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=CROSS_FEED_PULSE
+PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.Signal=S_TIM3_CH3
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=SPI_TOUCH_CLK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
-PB14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PB14.GPIO_Label=ENC_SPINDLE
-PB14.GPIO_PuPd=GPIO_PULLUP
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB14.Signal=S_TIM12_CH1
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=BUTTON_UP
 PB15.GPIO_PuPd=GPIO_PULLUP
@@ -223,12 +221,11 @@ PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPXTI0
-PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC1.GPIO_Label=SPINDLE_ENC
-PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC1.GPIO_PuPd=GPIO_PULLUP
-PC1.Locked=true
-PC1.Signal=GPXTI1
+PC11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC11.GPIO_Label=BUTTON_OK
+PC11.GPIO_PuPd=GPIO_PULLUP
+PC11.Locked=true
+PC11.Signal=GPIO_Input
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=SPI_TOUCH_MISO
 PC2.Mode=Full_Duplex_Master
@@ -247,15 +244,13 @@ PC5.GPIO_Label=TFT_DC_RS
 PC5.Locked=true
 PC5.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC6.GPIO_Label=CROSS_FEED_PULSE
-PC6.GPIO_PuPd=GPIO_PULLDOWN
-PC6.Signal=S_TIM3_CH1
-PC7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
-PC7.GPIO_Label=CROSS_FEED_EN
-PC7.GPIO_PuPd=GPIO_NOPULL
-PC7.Locked=true
-PC7.PinState=GPIO_PIN_SET
-PC7.Signal=GPIO_Output
+PC6.GPIO_Label=ENC_A_SPINDLE
+PC6.GPIO_PuPd=GPIO_PULLUP
+PC6.Signal=S_TIM8_CH1
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC7.GPIO_Label=ENC_B_SPINDLE
+PC7.GPIO_PuPd=GPIO_PULLUP
+PC7.Signal=S_TIM8_CH2
 PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=CROSS_FEED_DIR
 PC8.Locked=true
@@ -297,6 +292,11 @@ PD14.GPIO_Label=PANEL_ENC_BUTTON
 PD14.GPIO_PuPd=GPIO_PULLUP
 PD14.Locked=true
 PD14.Signal=GPIO_Input
+PD15.GPIOParameters=PinState,GPIO_Label
+PD15.GPIO_Label=CROSS_FEED_EN
+PD15.Locked=true
+PD15.PinState=GPIO_PIN_SET
+PD15.Signal=GPIO_Output
 PD6.GPIOParameters=PinState,GPIO_Label
 PD6.GPIO_Label=SPI_TOUCH_CS
 PD6.Locked=true
@@ -367,7 +367,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true,15-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_TIM7_Init-TIM7-false-HAL-true,15-MX_TIM8_Init-TIM8-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -405,18 +405,14 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
-SH.S_TIM12_CH1.0=TIM12_CH1,TriggerSource_TI1FP1
-SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
@@ -425,6 +421,10 @@ SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
 SH.S_TIM5_CH2.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,Encoder_Interface
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,Encoder_Interface
+SH.S_TIM8_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -449,8 +449,6 @@ TIM1.Prescaler=168-1
 TIM1.Pulse-PWM\ Generation1\ CH1=1
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM12.IPParameters=Slave_TriggerPolarity
-TIM12.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_BOTHEDGE
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IC1Filter=15
@@ -462,13 +460,13 @@ TIM2.Period=5000
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OC1Preload_PWM,Pulse-PWM Generation1 CH1,OCPolarity_1,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
-TIM3.OC1Preload_PWM=DISABLE
-TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-PWM Generation3 CH3,OC3Preload_PWM,Pulse-PWM Generation3 CH3,OCPolarity_3
+TIM3.OC3Preload_PWM=DISABLE
+TIM3.OCPolarity_3=TIM_OCPOLARITY_LOW
 TIM3.Period=1000
 TIM3.Prescaler=84-1
-TIM3.Pulse-PWM\ Generation1\ CH1=1
+TIM3.Pulse-PWM\ Generation3\ CH3=1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
@@ -490,17 +488,24 @@ TIM5.IPParameters=Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,IC1Polarity
 TIM5.Period=5000
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM6.IPParameters=Prescaler,Period
-TIM6.Period=1000
+TIM6.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM6.Period=1000-1
 TIM6.Prescaler=84-1
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM7.IPParameters=Prescaler
 TIM7.Prescaler=84-1
+TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV2
+TIM8.EncoderMode=TIM_ENCODERMODE_TI12
+TIM8.IC1Filter=15
+TIM8.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM8.IC2Filter=15
+TIM8.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM8.IPParameters=ClockDivision,EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter,Period
+TIM8.Period=3000*21-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-VP_TIM12_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM12_VS_ControllerModeClock.Signal=TIM12_VS_ControllerModeClock
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR1
